--- a/src/Pages/About/_about.scss
+++ b/src/Pages/About/_about.scss
@@ -55,7 +55,8 @@
     &__image {
       width: 100%;
       height: 100%;
-      background: #000 url("/src/images/myself.webp") no-repeat center center;
+      background: #000 url("/src/images/myself.webp") no-repeat center
+        center;
       position: absolute;
       left: 0;
       top: 0;
@@ -112,7 +113,7 @@
       align-items: center;
       flex-direction: column;
       gap: 5px;
-      transition: all 0.5s;
+      transition: filter 0.3s ease; /* Apply transition only to filter on hover */
       user-select: none;
       &:hover {
         filter: drop-shadow(0 0 0.75rem rgb(152, 117, 235));
